--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
     <title>WebGAL</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
-  <script type="module" crossorigin src="./assets/index.79a65047.js"></script>
-  <link rel="stylesheet" href="./assets/index.4d453a66.css">
+  <script type="module" crossorigin src="./assets/index.38126f15.js"></script>
+  <link rel="stylesheet" href="./assets/index.d1d4bc65.css">
 </head>
 <body>
 <!--快速显示落地页，让用户感知不到加载的过程-->
 <div id="Title_enter_page" onclick="enter()" style="
-            width: 1600px;
-            height: 900px;
+            width: 2560px;
+            height: 1440px;
             overflow: hidden;
             position: absolute;
             top: 0;
@@ -47,6 +47,7 @@
     top: 0;
     height: 100%;
     opacity: 1;
+    font-size: 175%;
     transition: opacity 1s;
     z-index: 15;
     font-family: '思源宋体',Georgia,serif">
@@ -57,11 +58,12 @@
             justify-content: center;
             align-items: center;
 ">
-            <div class="StartButton" style="font-size: xx-large;
+            <div class="StartButton" style="
             letter-spacing: 0.25em ;
             padding: 2em 2em 2em 2em;
             text-shadow: 0 0 30px rgba(0,0,0,0.5);
             transition: text-shadow 1s;
+            font-size: 175%;
 ">
                 PRESS THE SCREEN TO START
             </div>
@@ -75,7 +77,7 @@
         flex-flow: column;
         align-items: center ">
             <div style="padding: 0 0 0.25em 0">
-                Published by <a href="http://www.thebiennial.com" onclick="jump('http://www.thebiennial.com')">玄牝之门</a> 
+                Published by <a href="http://www.thebiennial.com" onclick="jump('http://www.thebiennial.com')">玄牝之门</a> Framework
             </div>
             <div>
                 Made with by <a href="https://github.com/RayHsuX" onclick="jump('https://github.com/RayHsuX')">Yggdrasill Art&Tech</a>
@@ -85,6 +87,26 @@
 </div>
 <div id="root"></div>
 
+<script>
+  /**
+   * 注册 Service Worker
+   */
+
+  const u = navigator.userAgent;
+  const isIOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //判断是否是 iOS终端
+  if ('serviceWorker' in navigator && !isIOS) {
+    navigator.serviceWorker
+    .register('./webgal-serviceworker.js', { scope: './assets' })
+    .then(function (reg) {
+      // registration worked
+      console.log('Registration succeeded. Scope is ' + reg.scope);
+    })
+    .catch(function (error) {
+      // registration failed
+      console.log('Registration failed with ' + error);
+    });
+  }
+</script>
 <script>
     let enterPromise=new Promise(res=>window.enterPromise=res)
     let renderPromise=new Promise(res=>window.renderPromise=res)
@@ -144,8 +166,8 @@
      * 对标题页进行自动强制缩放
      */
     function resizeTitle() {
-        const targetHeight = 900;
-        const targetWidth = 1600;
+        const targetHeight = 1440;
+        const targetWidth = 2560;
 
         const h = window.innerHeight; // 窗口高度
         const w = window.innerWidth; // 窗口宽度
